# tmux-bar

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
Resources/: README.txt
Sources/: AboutWindowController.h  AboutWindowController.m  AppDelegate.m  FocusWatcher.h  FocusWatcher.m  Info.plist  Models.h  Models.m  TmuxClient.h  TmuxClient.mm  TouchBarController.h  TouchBarController.m  main.m
cmake/: gen_app_icon.py
